@startuml
'https://plantuml.com/class-diagram
class Anzeige{
    AnzeigeNr
    BenutzerNr
    Preis
    Titel
    Beschreibung
}

class Benutzer{
    BenutzerNr
    BenutzerName
    Passwort
}

class Warenkorb{
    WarenkorbNr
    BenutzerNr
}
Anzeige "*" -- "1" Benutzer

Warenkorb "1" -- "1"Benutzer

Warenkorb"*" -- "*"Anzeige


(Warenkorb, Anzeige) ... Kauf

class Kauf{
    KaufNr
    WarenkorbNr
    AnzeigeNr
}

@enduml